--- a/QY.QingTu.DAL/QY.QingTu.DAL.csproj
+++ b/QY.QingTu.DAL/QY.QingTu.DAL.csproj
@@ -42,5 +42,9 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="DB\" />
+    <Folder Include="ExtDB\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
