--- a/QY.QingTu.Web/Views/web.config
+++ b/QY.QingTu.Web/Views/web.config
@@ -23,7 +23,7 @@
 
   <appSettings>
     <add key="webpages:Enabled" value="false" />
-    <add key="dd"/>
+    <add key="webpages" value="false" />
   </appSettings>
 
   <system.webServer>
